--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@
 env/
 unity-environment.log
 **/__pycache__
+
+# LaTeX
+*.acn 
+*.alg 
+*.aux 
+*.bbl 
+*.blg 
+*.brf
+*.fdb_latexmk
+*.fls 
+*.glsdefs 
+*.glo 
+*.ilg 
+*.ind 
+*.ist 
+*.lof 
+*.log 
+*.lol 
+*.lot 
+*.maf 
+*.mtc* 
+*.out 
+*.spl 
+*.synctex.* 
+*.toc 
+*.upa 
+*.upb 
+*.xwm
